2005-10-10	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-screen.c(terminal_screen_update_binding_delete):
	  Set VTE delete binding properly, patch provided by Bernhard Walle
	  <bernhard@bwalle.de>.

2005-09-14	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-window.c: Fix duplicated mnemonics in "File" and
	  "Edit" menu.

2005-08-30	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-widget.c: Add support for application/x-color drops.
	* terminal/terminal-preferences-dialog.c,
	  terminal/terminal-preferences.c, terminal/terminal-screen.c: Improve
	  the selection and cursor color handling, based on a patch provided by
	  Bernhard Walle <bernhard@bwalle.de>.

2005-08-19	Benedikt Meurer <benny@xfce.org>

	* autogen.sh, configure.in.in: Import framework changes from Thunar.
	  Fix debugging support.
	* configure.in.in: Drop the dependency on the XML::Parser perl module
	  for intltool.
	* configure.in.in, terminal/Makefile.am: Add explicit dependency on
	  libxfcegui4.
	* Makefile.am: Set automake options properly.
	* terminal/terminal-screen.c, terminal/terminal-shortcut-editor.c,
	  terminal/terminal-window.c: Drop explicit dependency on X11.
	* terminal/terminal-helper.c: Include <libxfcegui4/libxfcegui4.h>.
	* po/Terminal.pot: Remove autogenerated file.
	* terminal/terminal-widget.c: Use special regular expression to detect
	  an email address with glibc, because glibc does not seem to handle
	  the portable regex at a reasonable speed.

2005-07-06	Benedikt Meurer <benny@xfce.org>

	* NEWS, THANKS, configure.ac, terminal/terminal-window.c, po/vi.po:
	  Add vietnamese translations, thanks to Phan Vĩnh Thịnh
	  <teppi@vnlinux.org>.

2005-06-27	Benedikt Meurer <benny@xfce.org>

	* NEWS: Add comments about recently added features.
	* po/Terminal.pot, po/*.po: Run `gmake update-po'.

2005-06-27	Benedikt Meurer <benny@xfce.org>

	* doc/C/Terminal.xml.in, terminal/main.c, terminal/terminal-app.c,