@@ -1,3 +1,8 @@
+2005-11-16	Benedikt Meurer <benny@xfce.org>
+
+	* terminal/terminal-widget.c(terminal_widget_drag_data_received): Fix
+	  a bunch of gcc4 warnings.
+
 2005-10-10	Benedikt Meurer <benny@xfce.org>
 
 	* terminal/terminal-screen.c(terminal_screen_update_binding_delete):
